--- a/requirements.txt
+++ b/requirements.txt
@@ -29,5 +29,5 @@ yarl==1.22.0
 APScheduler==3.10.4
 APScheduler==3.10.4
 APScheduler==3.10.4
-googletrans==4.0.0rc1
+deep-translator==1.11.4
 langdetect==1.0.9
