--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,6 @@ python-dotenv==1.2.1
 langchain==0.3.2
 langchain-community==0.3.1
 langchain-openai==0.2.2
-faiss-cpu==1.8.0
+faiss-cpu==1.9.0.post1
 pypdf==5.1.0
 unstructured==0.16.4
