--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-aiofiles==25.1.0
 aiogram==3.23.0
 requests==2.32.5
 python-dotenv==1.2.1
+apscheduler==3.10.4
+langdetect==1.0.9
+deep-translator==1.11.4
+openai==1.109.1  # Для Perplexity compatibility
 
 # RAG
 langchain==0.3.2
@@ -10,3 +13,7 @@ langchain-openai==0.2.2
 faiss-cpu==1.9.0.post1
 pypdf==5.1.0
 unstructured==0.18.24
+apscheduler==3.10.4
+langdetect==1.0.9
+deep-translator==1.11.4
+openai==1.109.1
