--- a/.github/workflows/mobile.yml
+++ b/.github/workflows/mobile.yml
@@ -24,12 +24,19 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Check if package-lock.json exists
+      run: |
+        if [ ! -f ./mobile/package-lock.json ]; then
+          echo "Error: mobile/package-lock.json is missing"
+        fi
+
     - name: Setup Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        cache-dependency-path: mobile/package-lock.json
+        cache-dependency-path: |
+          ./mobile/package-lock.json
 
     - name: Install dependencies
       working-directory: ./mobile
