--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,6 @@ beautifulsoup4==4.12.3  # For HTML sanitization
 psutil>=5.9.0  # For process instance checking
 
 # Database
-sqlalchemy==2.0.25
+SQLAlchemy>=2.0.46,<3.0
 alembic==1.13.1
 aiosqlite==0.19.0
