--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,11 @@ aiohttp==3.13.3  # For async HTTP requests
 httpx>=0.27.0  # For Perplexity API client
 beautifulsoup4==4.12.3  # For HTML sanitization
 psutil>=5.9.0  # For process instance checking
+asyncpg
+psycopg2-binary
 
 # Database
 SQLAlchemy>=2.0.46,<3.0
 alembic==1.13.1
 aiosqlite==0.19.0
+asyncpg
