--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,20 @@ RAG_ENABLED=true
 # Override only if you need a different model (e.g., multilingual-e5-large)
 EMBEDDINGS_MODEL=sentence-transformers/all-MiniLM-L6-v2
 
+# SaaS pricing & budget guardrails (optional)
+# Used for UsageEvent metering + tenant budget enforcement.
+# Если PRICE_PER_1K_TOKENS_USD=0 и бюджеты пустые, метering работает, но стоимость будет $0
+# (то есть ничего не будет блокироваться по бюджету, пока не задашь лимиты).
+
+# Base price per 1K tokens in USD (fallback if PRICING_JSON not provided)
+PRICE_PER_1K_TOKENS_USD=0
+
+# Optional per-model pricing overrides as JSON.
+# Example: {"sonar":0.001,"sonar-pro":0.003}
+PRICING_JSON=
+
+# Tenant monthly budget hard limit in USD. Empty = no hard limit.
+TENANT_MONTHLY_BUDGET_USD=
+
+# Tenant monthly budget warning threshold in USD. Empty = no warning.
+TENANT_MONTHLY_BUDGET_WARN_USD=
